--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "example-restful-tasks",
+  "name": "assignment-api-design",
   "version": "2.0.0",
-  "description": "1DV026 - Example - RESTful Tasks",
+  "description": "1DV027 - Assignment API Design ",
   "type": "module",
   "main": "src/server.js",
   "scripts": {
@@ -12,7 +12,8 @@
   },
   "contributors": [
     "Johan Leitet <johan.leitet@lnu.se>",
-    "Mats Loock <mats.loock@lnu.se>"
+    "Mats Loock <mats.loock@lnu.se>",
+    "Eric Sundqvist <es225kz@student.lnu.se>"
   ],
   "license": "MIT",
   "private": true,
