--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
     "http-errors": "^2.0.0",
