--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "express": "^4.18.2",
     "helmet": "^6.0.1",
     "http-errors": "^2.0.0",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@lnu/eslint-config": "^1.1.7",
